--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@ html, body {
 }
 
 section {
-    background-color: aqua;
+    background-color: white;
     width: 100%;
-    height: 2000px;
+    height: 100%;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
